hphp/hack/test/typecheck/new_inference/tconst/generic_tc_invalid1.php.like_types.exp
File "generic_tc_invalid1.php", line 27, characters 11-13:
Some type constraint(s) here are violated (Typing[4062])
File "generic_tc_invalid1.php", line 16, characters 30-31:
'T1' is a constrained type parameter
File "generic_tc_invalid1.php", line 16, characters 74-74:
You are trying to access the member T but this is not an object, it is a dynamic value
File "generic_tc_invalid1.php", line 16, characters 30-31:
Definition is here
File "generic_tc_invalid1.php", line 27, characters 11-13:
Some type constraint(s) here are violated (Typing[4062])
File "generic_tc_invalid1.php", line 16, characters 30-31:
'T1' is a constrained type parameter
File "generic_tc_invalid1.php", line 16, characters 74-74:
You are trying to access the member T but this is not an object, it is a dynamic value
File "generic_tc_invalid1.php", line 16, characters 36-38:
Definition is here
File "generic_tc_invalid1.php", line 27, characters 15-16:
Invalid argument (Typing[4110])
File "generic_tc_invalid1.php", line 16, characters 41-42:
Some type constraint(s) are violated here
File "generic_tc_invalid1.php", line 16, characters 41-42:
T2 is a constrained type parameter
File "generic_tc_invalid1.php", line 9, characters 18-20:
Expected int
File "generic_tc_invalid1.php", line 16, characters 74-74:
  resulting from accessing the type constant 'T'
File "generic_tc_invalid1.php", line 23, characters 12-17:
  on an object of exactly the class IntBox
File "generic_tc_invalid1.php", line 16, characters 41-42:
But got dynamic
File "generic_tc_invalid1.php", line 28, characters 10-11:
Invalid return type (Typing[4110])
File "generic_tc_invalid1.php", line 16, characters 41-42:
Some type constraint(s) are violated here
File "generic_tc_invalid1.php", line 16, characters 41-42:
T2 is a constrained type parameter
File "generic_tc_invalid1.php", line 22, characters 19-24:
Expected string
File "generic_tc_invalid1.php", line 16, characters 41-42:
But got dynamic
File "generic_tc_invalid1.php", line 16, characters 74-74:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "generic_tc_invalid1.php", line 16, characters 36-38:
Definition is here
File "generic_tc_invalid1.php", line 17, characters 16-18:
You are trying to access the member get but this is not an object, it is a dynamic value or an object of type Box (Typing[4062])
File "generic_tc_invalid1.php", line 16, characters 36-38:
Definition is here
